added pizza egg

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easteregg",
-  "description": "js-library providing js easter eggs even on Christmas",
+  "description": "js-library providing js easter eggs even at Christmas",
   "version": "0.1.0",
   "homepage": "https://github.com/xy124/easteregg.js",
   "author": {
